# python-eventsource

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  release-please-config.json  requirements.txt  search.html  searchindex.js  setup.py  test-requirements.txt  tox.ini
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/publish/: action.yml
.github/actions/publish-docs/: action.yml
.github/workflows/: ci.yml  manual-publish-docs.yml  manual-publish.yml  release-please.yml
.ldrelease/: build-docs.sh  config.yml  publish-docs-dry-run.sh  publish-docs.sh
_modules/: index.html
_modules/ld_eventsource/: actions.html  errors.html  sse_client.html
_modules/ld_eventsource/config/: connect_strategy.html  error_strategy.html  retry_delay_strategy.html
_sources/: index.rst.txt
_static/: documentation_options.js
contract-tests/: Makefile  async_service.py  async_stream_entity.py  fastmain.py  fastservice.py  requirements.txt  service.py  stream_entity.py
docs/: Makefile  conf.py  index.rst
ld_eventsource/: __init__.py  actions.py  aiosse_client.py  async_client.py  async_http.py  async_reader.py  error_strategy.py  errors.py  event.py  http.py  reader.py  request_params.py  retry_delay.py  retry_delay_strategy.py  retry_filter.py  sse_client.py  version.py
ld_eventsource/config/: __init__.py  async_connect_strategy.py  connect_strategy.py  error_strategy.py  retry_delay_strategy.py
ld_eventsource/retry/: __init__.py  backoff.py  jitter.py  retry_delay_strategy.py
ld_eventsource/testing/: async_helpers.py  helpers.py  http_util.py  test_async_http_connect_strategy.py  test_async_reader.py  test_async_sse_client_basic.py  test_async_sse_client_retry.py  test_error_strategy.py  test_headers.py  test_http_connect_strategy.py  test_http_connect_strategy_with_sse_client.py  test_reader.py  test_retry_delay_strategy.py  test_sse_client_basic.py  test_sse_client_retry.py  test_sync_async_parity.py
testing/: helpers.py  http_util.py  test_aio_connect_strategy.py  test_aiohttp_connect_strategy_with_aiosse_client.py  test_aiosse_client_basic.py  test_error_strategy.py  test_http_connect_strategy.py  test_http_connect_strategy_with_sse_client.py  test_reader.py  test_retry_delay_strategy.py  test_sse_client.py  test_sse_client_basic.py  test_sse_client_retry.py
testing/retry/: test_backoff.py  test_jitter.py  test_retry_delay_strategy.py
