[tool.poetry]
name = "launchdarkly-eventsource"
version = "1.1.0"
description = "LaunchDarkly SSE Client"
authors = ["LaunchDarkly <dev@launchdarkly.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://docs.launchdarkly.com/sdk/server-side/python"
repository = "https://github.com/launchdarkly/python-eventsource"
documentation = "https://launchdarkly-python-sdk.readthedocs.io/en/latest/"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "ld_eventsource" },
    { include = "testing" },
]

[tool.poetry.dependencies]
python = ">=3.7"
urllib3 = ">=1.22.0,<3"


[tool.poetry.group.dev.dependencies]
mock = ">=2.0.0"
pytest = ">=2.8"
pytest-mypy = "0.8.1"
mypy = ">=1.4.1"


[tool.poetry.group.contract-tests]
optional = true

[tool.poetry.group.contract-tests.dependencies]
Flask = "2.2.5"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^1.3.0"
sphinx-autodoc-typehints = "^1.3.0"
sphinx-rtd-theme = "^1.3.0"
backoff = ">=1.4.3"
certifi = ">=2018.4.16"
expiringdict = ">=1.1.4"
pyrfc3339 = ">=1.0"
jsonpickle = "0.9.3"
semver = ">=2.7.9"
urllib3 = ">=1.22.0"
jinja2 = "3.0.0"

[tool.mypy]
python_version = "3.7"
ignore_missing_imports = true
install_types = true
non_interactive = true


[tool.pytest.ini_options]
addopts = ["-ra"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
