[project]
name = "launchdarkly-eventsource"
version = "1.7.0"
description = "LaunchDarkly SSE Client"
authors = [
    {name = "LaunchDarkly", email = "dev@launchdarkly.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "urllib3>=1.26.0,<3",
]

[project.urls]
Homepage = "https://docs.launchdarkly.com/sdk/server-side/python"
Repository = "https://github.com/launchdarkly/python-eventsource"
Documentation = "https://launchdarkly-sse-client-library.readthedocs.io/en/latest/"

[project.optional-dependencies]
async = ["aiohttp>=3.8.0,<4"]

[dependency-groups]
dev = [
    "mock>=2.0.0",
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.21",
    "aiohttp>=3.8.0,<4",
    "mypy>=1.4.0,<2",
    "pycodestyle>=2.12.1,<3",
    "isort>=5.13.2,<6",
]
contract-tests = [
    "Flask>=3.0",
]
docs = [
    "sphinx>=6,<8",
    "sphinx-autodoc-typehints>=1.3.0,<2",
    "sphinx-rtd-theme>=1.3,<4.0",
    "backoff>=1.4.3",
    "expiringdict>=1.1.4",
    "pyrfc3339>=1.0",
    "jsonpickle>1.4.1",
    "semver>=2.7.9",
    "urllib3>=1.26.0",
    "jinja2>=3.1.2",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = ["-ra"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ld_eventsource"]
exclude = ["ld_eventsource/testing"]
